fix: replace Lucene Morphology with AOT (working version)